# TPFinalEDyA

./: CMakeLists.txt  Makefile  avltree.c  avltree.h  conjuntos.c  conjuntos.h  hash.c  hash.h  interfaz.c  interfaz.h  intervalo.c  intervalo.h  main.c
arbolDeIntervalos/: avltree.c  avltree.h  intervalo.c  intervalo.h
arbolDeIntervalos/lists/: queue.c
arbolDeIntervalos/lists/dlist/: dlist.c  dlist.h
lists/dlist/: dlist.c
manejoAlias/: hash.c  hash.h  interfaz.c  interfaz.h
